--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
     "socket.io-client": "^4.7.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
